<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/row_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3665b0" />

    <TextView
        android:id="@+id/row_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_nombre"
        android:text="@string/direccion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_direccion"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_email"
        android:text="@string/web"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_nombre"
        android:layout_alignParentRight="true"
        android:text="@string/categoria"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/row_web"
        android:layout_alignParentRight="true" />

</RelativeLayout>