<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvNombre"
            android:ems="10"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etNombre"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvDireccion"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etDireccion"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvEmail"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etEmail"
            android:text="@string/web" />

        <EditText
            android:id="@+id/etWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvWeb"
            android:ems="10"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etWeb"
            android:text="@string/categoria" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvCategoria" />

        <TextView
            android:id="@+id/tvIdCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/spCategoria"
            android:layout_below="@+id/spCategoria"
            android:visibility="gone" />

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spCategoria"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/guardar" />
    </RelativeLayout>

</ScrollView>