<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <RadioGroup
            android:id="@+id/opcionBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <RadioButton
                android:id="@+id/rbNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/busqueda_nombre" />

            <RadioButton
                android:id="@+id/rbCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busqueda_categoria" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layoutBusquedaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/opcionBusqueda"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvBusquedaNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduccion_texto" />

            <EditText
                android:id="@+id/etBusquedaNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBusquedaCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/opcionBusqueda"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/tvBusquedaCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccion_categoria" />

            <Spinner
                android:id="@+id/spBusquedaCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBusquedaIdCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/bBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutBusquedaCategoria"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/buscar" />
    </RelativeLayout>

</ScrollView>