<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="40dp" />

        <LinearLayout
            android:id="@+id/layoutOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layoutCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/ibCrear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/crear"
                    android:src="@drawable/crear" />

                <TextView
                    android:id="@+id/tvCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/crear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/ibEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/eliminar"
                    android:src="@drawable/eliminar" />

                <TextView
                    android:id="@+id/tvEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/eliminar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/ibBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/buscar"
                    android:src="@drawable/buscar" />

                <TextView
                    android:id="@+id/tvBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/buscar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAccederWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/ibAccederWeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/acceder_web"
                    android:src="@drawable/acceder_web" />

                <TextView
                    android:id="@+id/tvAccederWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/acceder_web" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>